# fast-api-poc

./: .gitignore  README.md  app.ini  poetry.sh  pyproject.toml
src/: mongo.mongo  mongo.sh
src/myapp/: dependencies.py  log.py  main.py  main_aio.py  main_hello.py  utils.py
src/myapp/auth/: dependencies.py  router.py  service.py
src/myapp/clouds/: dependencies.py  models.py  router.py  service.py
src/myapp/database/: app.ini  dependencies.py  model.py  mongo.py
src/myapp/jobs/: main.py  models.py
src/myapp/keycloak_example/: app.ini  keycloak_poc.py  keycloak_tester.py  main_keycloak_authr_token.py  main_keycloak_client_cred.py  main_keycloak_mydevice.py  main_keycloak_mypwd.py  main_keycloak_password.py
src/myapp/rbac/: cloud.polar  dependencies.py  exceptions.py  models.py  router.py  service.py
src/myapp/rbac/rules/: api.polar  cloud.polar  project.polar
src/myapp/routers/: wafers.py
tests/: test_main.py
